# hpsync

./: .coveragerc  .gitignore  LICENSE  README.md  hpsync.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/hpsync/: __init__.py  __main__.py  cli.py
tests/: test_config.py  test_entrypoint.py  test_sync.py
