[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hpsync"
version = "0.1.0"
description = "Safely synchronize uncommitted work across local and SSH Git worktrees."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sam Young" }]
keywords = ["git", "sync", "ssh", "worktree"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Repository = "https://github.com/youngsm/hpsync"

[project.scripts]
hpsync = "hpsync:main"

[tool.setuptools]
py-modules = ["hpsync"]
